--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     
     <nav>
         <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Contact</a>
+        <a href="#">News</a>
+        <a href="#">Products & Services</a>
+        <a href="#">Facilities</a>
     </nav>
 
     <main>
