Add navigation links

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     </header>
     
     <nav>
-        <a href="#">Home</a>
-        <a href="#">News</a>
-        <a href="#">Products & Services</a>
-        <a href="#">Facilities</a>
+        <a href="index.html">Home</a>
+        <a href="news.html">News</a>
+        <a href="products.html">Products & Services</a>
+        <a href="facilities.html">Facilities</a>
     </nav>
 
     <main>
