Adjust and write content for main page

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
     </main>
 
     <div class="cta">
-        <h2>Join Us Today!</h2>
-        <p>Sign up for our newsletter to receive exclusive updates and offers.</p>
-        <button>Sign Up Now</button>
+        <h2>Book Now!</h2>
+        <p>Book now for an appointment with us!</p>
+        <button>Book Now</button>
     </div>
 
     <footer>
-        <p>&copy; 2023 Sample Website. All rights reserved.</p>
+        <p>&copy; ©Kendra Mulligan Physical Therapist Corp 2010</p>
     </footer>
 </body>
 </html>
