Create a simple CSS for the project

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ascent Physiotherapy</title>
+    <!-- Link to the external CSS stylesheet -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
+        <img src="images\Ascent Logo new@2x.png" alt="Ascent Physiotherapy Logo">
         <h1>Welcome to Ascent Physiotherapy</h1>
-        <p>Ascent Physiotherapy is a full service physiotherapy clinic located in Comox, BC.  We offer Physiotherapy, including Manual/Manipulative Therapy, IMS, Acupuncture, Radial Shockwave Therapy and exercise prescription including Personal Training to the residents of the Comox Valley and surrounding area.</p>
+        <p>Ascent Physiotherapy is a full service physiotherapy clinic located in Comox, BC. We offer Physiotherapy, including Manual/Manipulative Therapy, IMS, Acupuncture, Radial Shockwave Therapy and exercise prescription including Personal Training to the residents of the Comox Valley and surrounding area.</p>
+        <img src="images\_DSC6838-Edit@2x.jpg" alt="Ascent Physiotherapy Team">
     </header>
     
     <nav>
