--- a/facilities.html
+++ b/facilities.html
@@ -20,4 +20,11 @@
 ➡ Treatment attire is provided but we encourage you to bring your own athletic shorts or yoga pants.
 
         </p>
+        <img src="images\271669605_342845887842755_4508636137391143273_n@2x.jpg" alt="Ascent Physiotherapy Team">
+        <img src="images\IMG_5609@2x.jpeg" alt="Ascent Physiotherapy Team">
+        <img src="images\RLMYT-2.jpg" alt="Ascent Physiotherapy Team">
+        <img src="images\RLMYT-3.jpg" alt="Ascent Physiotherapy Team">
+        <img src="images\RLMYT-4.jpg">
+    
+    
     </header>
