--- a/news.html
+++ b/news.html
@@ -12,4 +12,5 @@
 
             Radial Shockwave is now available at Ascent Physiotherapy with proven effectiveness treating chronic tendinopathies and many other conditions.  New technology enhances comfort while still maintaining efficacy - based on technology originally developed for blasting kidney stones; this modality is now used for many conditions encountered in rehabilitation settings.
             </p>
+            <img src="images\IMG_8486@2x.jpeg" alt="Ascent Physiotherapy Team">
     </header>
