Add links to Facilities page

--- a/facilities.html
+++ b/facilities.html
@@ -6,6 +6,12 @@
     <!-- Link to the external CSS stylesheet -->
     <link rel="stylesheet" href="style.css">
     <title>Facilities</title>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="news.html">News</a>
+        <a href="products.html">Products & Services</a>
+        <a href="facilities.html">Facilities</a>
+    </nav>
 </head>
 <body>
     <header>
