Add links to Products page

--- a/products.html
+++ b/products.html
@@ -6,6 +6,11 @@
     <!-- Link to the external CSS stylesheet -->
     <link rel="stylesheet" href="style.css">
     <title>Products & Services</title>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="news.html">News</a>
+        <a href="facilities.html">Facilities</a>
+    </nav>
 </head>
 <body>
     <header>
