--- a/facilities.html
+++ b/facilities.html
@@ -10,22 +10,17 @@
         <a href="index.html">Home</a>
         <a href="news.html">News</a>
         <a href="products.html">Products & Services</a>
-        <a href="facilities.html">Facilities</a>
     </nav>
 </head>
 <body>
     <header>
         <h1>Facilities</h1>
         <p>
-            ➡ Ascent Physiotherapy is currently equipped with 12 private and semi private treatment cubicles.
-
-➡ Large gym area equipped with treadmill, stationary bike, balance equipment, free weights and a weight rack.
-
-➡ Large floor exercise area with room for gait analysis and balance/co-ordination exercises.
-
-➡ Modalities include radial shockwave therapy, moist heat, ice, therapeutic ultrasound, interferential current (IFC), transcutaneous electrical stimulation (TENS), muscle stimulation and traction.
-
-➡ Treatment attire is provided but we encourage you to bring your own athletic shorts or yoga pants.
+     Ascent Physiotherapy is currently equipped with 12 private and semi private treatment cubicles.
+Large gym area equipped with treadmill, stationary bike, balance equipment, free weights and a weight rack.
+Large floor exercise area with room for gait analysis and balance/co-ordination exercises.
+Modalities include radial shockwave therapy, moist heat, ice, therapeutic ultrasound, interferential current (IFC), transcutaneous electrical stimulation (TENS), muscle stimulation and traction.
+Treatment attire is provided but we encourage you to bring your own athletic shorts or yoga pants.
 
         </p>
         <img src="images\271669605_342845887842755_4508636137391143273_n@2x.jpg" alt="Ascent Physiotherapy Team">
