Write a hero section for the html

--- a/index.html
+++ b/index.html
@@ -41,49 +41,39 @@
             margin: 0 15px;
         }
 
-        .intro {
-            background-color: #007bff;
+        .hero {
+            background-image: url('path/to/your/image.jpg');
+            background-size: cover;
+            background-position: center;
             color: #fff;
-            padding: 60px 0;
             text-align: center;
+            padding: 100px 0;
         }
 
-        .intro h2 {
-            font-size: 2.5em;
+        .hero h2 {
+            font-size: 3em;
             margin-bottom: 20px;
         }
 
-        .intro p {
-            font-size: 1.2em;
+        .hero p {
+            font-size: 1.5em;
             margin-bottom: 30px;
         }
 
-        section {
-            padding: 60px 0;
-            text-align: center;
-        }
-
-        section h2 {
-            font-size: 2.5em;
-            margin-bottom: 20px;
-        }
-
-        section p {
-            font-size: 1.2em;
-            margin-bottom: 30px;
-        }
-
+        .intro,
+        section,
         .cta {
-            background-color: #f8f9fa;
             padding: 60px 0;
             text-align: center;
         }
 
+        section h2,
         .cta h2 {
             font-size: 2.5em;
             margin-bottom: 20px;
         }
 
+        section p,
         .cta p {
             font-size: 1.2em;
             margin-bottom: 30px;
@@ -142,6 +132,12 @@
         <img src="images\_DSC6838-Edit@2x (1).jpg" alt="Ascent Physiotherapy Team">
         <p>Ascent Physiotherapy is a full-service physiotherapy clinic located in Comox, BC. We offer Physiotherapy, including Manual/Manipulative Therapy, IMS, Acupuncture, Radial Shockwave Therapy, and exercise prescription including Personal Training to the residents of the Comox Valley and surrounding area.</p>
     </header>
+
+    <!-- Hero Section -->
+    <div class="hero">
+        <h2>Your Journey to Health Starts Here</h2>
+        <p>Empowering you with personalized physiotherapy care for a healthier and active life.</p>
+    </div>
 
     <!-- Section 1 -->
     <div class="intro">
