--- a/index.html
+++ b/index.html
@@ -41,39 +41,65 @@
             margin: 0 15px;
         }
 
-        .hero {
-            background-image: url('path/to/your/image.jpg');
-            background-size: cover;
-            background-position: center;
+        .intro {
+            background-color: #007bff;
             color: #fff;
-            text-align: center;
-            padding: 100px 0;
-        }
-
-        .hero h2 {
-            font-size: 3em;
-            margin-bottom: 20px;
-        }
-
-        .hero p {
-            font-size: 1.5em;
-            margin-bottom: 30px;
-        }
-
-        .intro,
-        section,
-        .cta {
             padding: 60px 0;
             text-align: center;
         }
 
-        section h2,
+        .intro h2 {
+            font-size: 2.5em;
+            margin-bottom: 20px;
+        }
+
+        .intro p {
+            font-size: 1.2em;
+            margin-bottom: 30px;
+        }
+
+        section {
+            padding: 60px 0;
+            text-align: center;
+        }
+
+        section h2 {
+            font-size: 2.5em;
+            margin-bottom: 20px;
+        }
+
+        section p {
+            font-size: 1.2em;
+            margin-bottom: 30px;
+        }
+
+        .services, .team, .facilities, .community {
+            background-color: #f8f9fa;
+            padding: 60px 0;
+            text-align: center;
+        }
+
+        .services h2, .team h2, .facilities h2, .community h2 {
+            font-size: 2.5em;
+            margin-bottom: 20px;
+        }
+
+        .services p, .team p, .facilities p, .community p {
+            font-size: 1.2em;
+            margin-bottom: 30px;
+        }
+
+        .cta {
+            background-color: #f8f9fa;
+            padding: 60px 0;
+            text-align: center;
+        }
+
         .cta h2 {
             font-size: 2.5em;
             margin-bottom: 20px;
         }
 
-        section p,
         .cta p {
             font-size: 1.2em;
             margin-bottom: 30px;
@@ -133,12 +159,6 @@
         <p>Ascent Physiotherapy is a full-service physiotherapy clinic located in Comox, BC. We offer Physiotherapy, including Manual/Manipulative Therapy, IMS, Acupuncture, Radial Shockwave Therapy, and exercise prescription including Personal Training to the residents of the Comox Valley and surrounding area.</p>
     </header>
 
-    <!-- Hero Section -->
-    <div class="hero">
-        <h2>Your Journey to Health Starts Here</h2>
-        <p>Empowering you with personalized physiotherapy care for a healthier and active life.</p>
-    </div>
-
     <!-- Section 1 -->
     <div class="intro">
         <h2>Experience Excellence in Physiotherapy</h2>
@@ -146,27 +166,27 @@
     </div>
 
     <!-- Section 2 -->
-    <section>
-        <h2>Our Services</h2>
-        <p>Explore a range of physiotherapy services tailored to meet your individual needs. Our team of skilled professionals is committed to delivering high-quality care and supporting your well-being.</p>
+    <section class="services">
+        <h2>Our Physiotherapy Services</h2>
+        <p>Discover a comprehensive range of physiotherapy services tailored to meet your individual needs. Our dedicated team is committed to delivering high-quality care, addressing various conditions, and promoting overall well-being.</p>
     </section>
 
     <!-- Section 3 -->
-    <section>
-        <h2>Meet Our Experienced Team</h2>
-        <p>Get to know our team of skilled physiotherapists who are passionate about helping you on your rehabilitation journey. With a wealth of experience and expertise, we provide personalized care to support your well-being.</p>
+    <section class="team">
+        <h2>Meet Our Expert Physiotherapy Team</h2>
+        <p>Our team of experienced and highly skilled physiotherapists is passionate about guiding you on your rehabilitation journey. With a patient-centered approach, we are here to support you and help you achieve your health and fitness goals.</p>
     </section>
 
     <!-- Section 4 -->
-    <section>
+    <section class="facilities">
         <h2>State-of-the-Art Facilities</h2>
-        <p>Experience physiotherapy in a modern and comfortable environment. Our state-of-the-art facilities are equipped with the latest technology to enhance your rehabilitation and ensure your comfort.</p>
+        <p>Experience physiotherapy in a modern and comfortable environment. Our state-of-the-art facilities are equipped with advanced technology to enhance your rehabilitation process. We prioritize your comfort and well-being throughout your treatment.</p>
     </section>
 
     <!-- Section 5 -->
-    <section>
+    <section class="community">
         <h2>Community Engagement</h2>
-        <p>Ascent Physiotherapy actively engages with the community. Discover our outreach programs and events designed to promote health and wellness in Comox and beyond. Join us in building a healthier community together.</p>
+        <p>At Ascent Physiotherapy, we actively engage with the community to promote health and wellness. Explore our outreach programs and events designed to create awareness and support a healthier lifestyle in Comox and beyond. Join us in building a stronger and healthier community together.</p>
     </section>
 
     <div class="cta">
