--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             <div class="footer-content">
                 <div class="footer-section about">
                     <h3>About Us</h3>
+                    <img src="images\thisisengineering-raeng-1-88FdpvAjg-unsplash (1).jpg" alt="Logo">
                     <p>Ascent Physiotherapy is a leading physiotherapy clinic in Comox, BC, dedicated to providing high-quality care and personalized treatment to enhance your well-being.</p>
                 </div>
     
@@ -106,6 +107,7 @@
     
                 <div class="footer-section contact-form">
                     <h3>Contact Us</h3>
+                    <p> Give us a call at 250-339-1039! </p>
                     <form>
                         <!-- Include your contact form fields here -->
                     </form>
