Create new stylesheet for facilities page

--- a/facilities.html
+++ b/facilities.html
@@ -3,15 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Link to the external CSS stylesheet -->
-    <link rel="stylesheet" href="style.css">
     <title>Facilities</title>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="news.html">News</a>
-        <a href="products.html">Products & Services</a>
-    </nav>
-</head>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+    <body>
+
+        <header class="header">
+            <div class="container">
+                <div class="logo">
+                    <img src="images\Ascent Logo new@2x.png" alt="Logo">
+                </div>
+                <nav class="nav">
+                    <a href="index.html">Home</a>
+                    <a href="facilities.html">Facilities</a>
+                    <a href="products.html">Products</a>
+                    <a href="news.html">News</a>
+                    <a href="#contact">Contact</a>
+                </nav>
+            </div>
+        </header>
 <body>
     <header>
         <h1>Facilities</h1>
