--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <li><a href="facilities.html">Facilities</a></li>
                         <li><a href="products.html">Products</a></li>
                         <li><a href="news.html">News</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
     
