--- a/news.html
+++ b/news.html
@@ -1,12 +1,14 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facilities</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="news.css"> <!-- Link to the new CSS file -->
+    <link rel="stylesheet" href="style.css"> <!-- Link to the shared CSS file -->
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
     <body>
+
 
         <header class="header">
             <div class="container">
@@ -30,3 +32,39 @@
             </p>
             <img src="images\IMG_8486@2x.jpeg" alt="Ascent Physiotherapy Team">
     </header>
+
+    <footer class="footer">
+        
+    
+        <div class="footer-section links">
+            <h3>Quick Links</h3>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="facilities.html">Facilities</a></li>
+                <li><a href="products.html">Products</a></li>
+                <li><a href="news.html">News</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+
+        <div class="footer-section contact-form">
+            <h3>Contact Us</h3>
+            <p> Give us a call at 250-339-1039! </p>
+            <form>
+                <!-- Include your contact form fields here -->
+            </form>
+        </div>
+    </div>
+</div>
+
+<div class="footer-bottom">
+    <p>&copy; 2023 Ascent Physiotherapy | Kendra Mulligan Physical Therapist Corp</p>
+</div>
+</footer>
+
+
+</body>
+</html>
+
+</header>
+</body>
