Updated links for all pages

--- a/products.html
+++ b/products.html
@@ -19,7 +19,7 @@
                     <a href="facilities.html">Facilities</a>
                     <a href="products.html">Products</a>
                     <a href="news.html">News</a>
-                    <a href="#contact">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </nav>
             </div>
         </header>
@@ -70,7 +70,7 @@
                             <li><a href="facilities.html">Facilities</a></li>
                             <li><a href="products.html">Products</a></li>
                             <li><a href="news.html">News</a></li>
-                            <li><a href="#contact">Contact</a></li>
+                            <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </div>
         
