--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="facilities.html">Facilities</a>
                 <a href="products.html">Products</a>
                 <a href="news.html">News</a>
-                <a href="#contact">Contact</a>
+                <a href="contact.html">Contact</a>
             </nav>
         </div>
     </header>
