Add youtube video as media

--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
         </div>
     </section>
 
+    <section id="home" class="hero">
+        <div class="container">
+            <div class="hero-content">
+                <h1>Why is Physiotherapy Important?</h1>
+                <p>Physiotherapy is crucial for enhancing physical well-being through targeted exercises, manual therapies, and rehabilitation strategies. It provides effective pain relief, facilitates recovery after injuries or surgeries, and improves mobility and function. Physiotherapists play a key role in preventing injuries, managing chronic conditions, and supporting individuals with neurological or musculoskeletal disorders. From promoting proper posture to empowering patients with knowledge, physiotherapy contributes to an improved quality of life by addressing a range of health issues and fostering overall wellness.</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/QGsGvhNaTZw?si=ihz3FlPxXkMUmafh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+        </div>
+    </section>
+
+
     <section id="services" class="services">
         <div class="container">
             <h2>Our Services</h2>
