--- a/news.html
+++ b/news.html
@@ -18,7 +18,7 @@
                 <nav class="nav">
                     <a href="index.html">Home</a>
                     <a href="facilities.html">Facilities</a>
-                    <a href="products.html">Products</a>
+                    <a href="products.html">Products & Services</a>
                     <a href="news.html">News</a>
                     <a href="contact.html">Contact</a>
                 </nav>
@@ -41,7 +41,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="facilities.html">Facilities</a></li>
-                <li><a href="products.html">Products</a></li>
+                <li><a href="products.html">Products & Services</a></li>
                 <li><a href="news.html">News</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
