--- a/facilities.html
+++ b/facilities.html
@@ -18,9 +18,9 @@
             <nav class="nav">
                 <a href="index.html">Home</a>
                 <a href="facilities.html">Facilities</a>
-                <a href="products.html">Products</a>
+                <a href="products.html">Products & Services</a>
                 <a href="news.html">News</a>
-                <a href="#contact">Contact</a>
+                <a href="contact.html">Contact</a>
             </nav>
         </div>
     </header>
@@ -64,7 +64,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="facilities.html">Facilities</a></li>
-                        <li><a href="products.html">Products</a></li>
+                        <li><a href="products.html">Products & Services</a></li>
                         <li><a href="news.html">News</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
