--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav class="nav">
                 <a href="index.html">Home</a>
                 <a href="facilities.html">Facilities</a>
-                <a href="products.html">Products</a>
+                <a href="products.html">Products & Services</a>
                 <a href="news.html">News</a>
                 <a href="contact.html">Contact</a>
             </nav>
@@ -34,6 +34,7 @@
             </div>
         </div>
     </section>
+
 
     <section id="home" class="hero">
         <div class="container">
@@ -110,7 +111,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="facilities.html">Facilities</a></li>
-                        <li><a href="products.html">Products</a></li>
+                        <li><a href="products.html">Products & Services</a></li>
                         <li><a href="news.html">News</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
